# tauri-nextjs-template

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml  test-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
